// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartRestore /> should redirect to the cart page and display a warning if the checkout has been completed 1`] = `
Object {
  "checkoutId": null,
  "customAttributes": Object {},
  "discountCode": null,
  "id": "mock-id",
  "lineItems": Array [],
  "rCheckoutId": null,
  "version": 4,
}
`;

exports[`<CartRestore /> should redirect to the cart page and display a warning if the checkout has been completed 2`] = `
Object {
  "checkoutId": null,
  "customAttributes": Object {},
  "discountCode": null,
  "id": "mock-id",
  "lineItems": Array [],
  "rCheckoutId": null,
  "version": 4,
}
`;

exports[`<CartRestore /> should redirect to the cart page and display an error if the checkout does not exist 1`] = `
Object {
  "checkoutId": null,
  "customAttributes": Object {},
  "discountCode": null,
  "id": "mock-id",
  "lineItems": Array [],
  "rCheckoutId": null,
  "version": 4,
}
`;

exports[`<CartRestore /> should redirect to the cart page and display an error if the checkout does not exist 2`] = `
Object {
  "checkoutId": null,
  "customAttributes": Object {},
  "discountCode": null,
  "id": "mock-id",
  "lineItems": Array [],
  "rCheckoutId": null,
  "version": 4,
}
`;

exports[`<CartRestore /> should redirect to the cart page if the checkout is successfully restored 1`] = `
Object {
  "checkoutId": null,
  "customAttributes": Object {},
  "discountCode": null,
  "id": "mock-id",
  "lineItems": Array [],
  "rCheckoutId": null,
  "version": 4,
}
`;

exports[`<CartRestore /> should redirect to the cart page if the checkout is successfully restored 2`] = `
Object {
  "checkoutId": null,
  "customAttributes": Object {
    "key": "val",
  },
  "discountCode": null,
  "id": "mock-id",
  "lineItems": Array [
    Object {
      "containerPrices": null,
      "containerUpgrade": false,
      "frequency": Object {
        "chargeDelayDays": null,
        "orderIntervalFrequency": 30,
        "orderIntervalUnit": "DAY",
      },
      "handle": "move",
      "id": "E9vEeaxExeZQv38FGeT+UAVTr/o=",
      "imageUrl": "https://cdn.shopify.com/mock-image/variant-4.jpg",
      "productId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0LzE=",
      "properties": Object {},
      "quantity": 1,
      "subscriptionUnitPrice": Object {
        "amount": "29.99",
        "currencyCode": "USD",
      },
      "subtitle": "Default Title",
      "title": "Move",
      "unitPrice": Object {
        "amount": "34.99",
        "currencyCode": "USD",
      },
      "variantId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8x",
    },
  ],
  "rCheckoutId": "1",
  "version": 4,
}
`;

exports[`<CartRestore /> should redirect to the cart page is no token is provided 1`] = `
Object {
  "checkoutId": null,
  "customAttributes": Object {},
  "discountCode": null,
  "id": "mock-id",
  "lineItems": Array [],
  "rCheckoutId": null,
  "version": 4,
}
`;

exports[`checkoutLineItemsToCartLineItems should avoid assigning duplicate line IDs 1`] = `"Duplicate cart line item ID \\"cart-line-item-id\\" in checkout \\"checkout-id\\""`;

exports[`checkoutLineItemsToCartLineItems should avoid assigning duplicate line IDs 2`] = `
Array [
  Array [
    [Error: Duplicate cart line item ID "cart-line-item-id" in checkout "checkout-id"],
    Object {
      "extra": Object {
        "checkout": Object {
          "id": "checkout-id",
          "lineItems": Array [
            Object {
              "__typename": "RLineItem",
              "frequency": Object {
                "__typename": "RFrequency",
                "chargeDelayDays": null,
                "orderIntervalFrequency": 30,
                "orderIntervalUnit": "DAY",
              },
              "id": "E9vEeaxExeZQv38FGeT+UAVTr/o=",
              "image": "https://cdn.shopify.com/s/files/1/0266/2825/9918/products/the-one-x1.png?v=1589206978",
              "linePrice": Object {
                "__typename": "MoneyV2",
                "amount": "34.99",
                "currencyCode": "USD",
              },
              "price": Object {
                "__typename": "MoneyV2",
                "amount": "34.99",
                "currencyCode": "USD",
              },
              "product": Object {
                "__typename": "Product",
                "availableForSale": true,
                "bottomline": Object {
                  "__typename": "ReviewBottomline",
                  "averageScore": 4.5,
                  "totalReviews": 2,
                },
                "bundleUnit": null,
                "bundleUnitPlural": null,
                "caloriesPerUnit": null,
                "compareAtPriceV2": null,
                "containers": null,
                "defaultSelectionSku": null,
                "defaultSelectionSubscription": null,
                "defaultVariantOrder": null,
                "description": "Targeted joint and mobility support",
                "featuredImage": Object {
                  "__typename": "ImageConnection",
                  "edges": Array [
                    Object {
                      "__typename": "ImageEdge",
                      "node": Object {
                        "__typename": "Image",
                        "id": "1",
                        "src": "https://cdn.shopify.com/mock-image/product-1.jpg",
                      },
                    },
                  ],
                },
                "handle": "move",
                "hasSubscription": null,
                "id": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0LzQ1MzU1Mzc1MzMwMDY=",
                "images": Object {
                  "__typename": "ImageConnection",
                  "edges": Array [
                    Object {
                      "__typename": "ImageEdge",
                      "node": Object {
                        "__typename": "Image",
                        "height": 1000,
                        "id": "1",
                        "url": "https://cdn.shopify.com/mock-image/product-1.jpg",
                        "width": 1000,
                      },
                    },
                    Object {
                      "__typename": "ImageEdge",
                      "node": Object {
                        "__typename": "Image",
                        "height": 1000,
                        "id": "2",
                        "url": "https://cdn.shopify.com/mock-image/product-2.jpg",
                        "width": 1000,
                      },
                    },
                    Object {
                      "__typename": "ImageEdge",
                      "node": Object {
                        "__typename": "Image",
                        "height": 1000,
                        "id": "3",
                        "url": "https://cdn.shopify.com/mock-image/product-3.jpg",
                        "width": 1000,
                      },
                    },
                    Object {
                      "__typename": "ImageEdge",
                      "node": Object {
                        "__typename": "Image",
                        "height": 1000,
                        "id": "4",
                        "url": "https://cdn.shopify.com/mock-image/variant-4.jpg",
                        "width": 1000,
                      },
                    },
                  ],
                },
                "isSubscriptionOnly": null,
                "listingSku": null,
                "listingSubscription": null,
                "listingSubtitle": null,
                "options": Array [
                  Object {
                    "__typename": "ProductOption",
                    "id": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0T3B0aW9uLzU4NzMxNjM4NjIwOTQ=",
                    "name": "Title",
                    "values": Array [
                      "Default Title",
                    ],
                  },
                ],
                "preorderShippingEstimate": null,
                "preorderType": null,
                "priceRange": Object {
                  "__typename": "ProductPriceRange",
                  "maxVariantPrice": Object {
                    "__typename": "MoneyV2",
                    "amount": "95.98",
                    "currencyCode": "USD",
                  },
                  "minVariantPrice": Object {
                    "__typename": "MoneyV2",
                    "amount": "35.99",
                    "currencyCode": "USD",
                  },
                },
                "productType": "Pet Vitamins & Supplements",
                "seo": Object {
                  "description": "",
                  "title": "",
                },
                "subscriptionFrequencies": null,
                "subscriptionUnit": null,
                "subtitle": Object {
                  "__typename": "Metafield",
                  "id": "metafield-subtitle-move",
                  "value": "Targeted joint and mobility support",
                },
                "title": "Move",
                "totalInventory": 1000,
                "unit": null,
                "variants": Object {
                  "__typename": "ProductVariantConnection",
                  "edges": Array [
                    Object {
                      "__typename": "ProductVariantEdge",
                      "node": Object {
                        "__typename": "ProductVariant",
                        "availableForSale": true,
                        "barcode": "123",
                        "bundleSize": null,
                        "compareAtPriceV2": Object {
                          "__typename": "MoneyV2",
                          "amount": "39.99",
                          "currencyCode": "USD",
                        },
                        "defaultShippingIntervalFrequency": Object {
                          "__typename": "Metafield",
                          "id": "defaultShippingIntervalFrequency-1",
                          "value": "1",
                        },
                        "id": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8zMTc0NjY1MDQwNjk5MA==",
                        "image": Object {
                          "__typename": "Image",
                          "height": 1000,
                          "id": "4",
                          "url": "https://cdn.shopify.com/mock-image/variant-4.jpg",
                          "width": 1000,
                        },
                        "listingUsp": null,
                        "priceV2": Object {
                          "__typename": "MoneyV2",
                          "amount": "34.99",
                          "currencyCode": "USD",
                        },
                        "quantityAvailable": 10,
                        "selectedOptions": Array [
                          Object {
                            "__typename": "SelectedOption",
                            "name": "Title",
                            "value": "Default Title",
                          },
                        ],
                        "sku": "move",
                        "subscriptionPriceAmount": Object {
                          "__typename": "Metafield",
                          "id": "Z2lkOi8vc2hvcGlmeS9NZXRhZmllbGQvMTI5ODIzNzg3NTgyMjI=",
                          "value": "29.99",
                        },
                        "title": "Default Title",
                        "units": Object {
                          "__typename": "Metafield",
                          "id": "gid://shopify/Metafield/1",
                          "value": "60",
                        },
                      },
                    },
                  ],
                },
                "vendor": "Front Of The Pack",
              },
              "productId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0LzQ1MzU1Mzc1MzMwMDY=",
              "productType": "",
              "properties": Array [
                Object {
                  "name": "cartLineItemId",
                  "value": "cart-line-item-id",
                },
              ],
              "quantity": 1,
              "sku": "move",
              "title": "Move",
              "variant": Object {
                "__typename": "ProductVariant",
                "availableForSale": true,
                "barcode": "123",
                "bundleSize": null,
                "compareAtPriceV2": Object {
                  "__typename": "MoneyV2",
                  "amount": "39.99",
                  "currencyCode": "USD",
                },
                "defaultShippingIntervalFrequency": Object {
                  "__typename": "Metafield",
                  "id": "defaultShippingIntervalFrequency-1",
                  "value": "1",
                },
                "id": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8zMTc0NjY1MDQwNjk5MA==",
                "image": Object {
                  "__typename": "Image",
                  "height": 1000,
                  "id": "4",
                  "url": "https://cdn.shopify.com/mock-image/variant-4.jpg",
                  "width": 1000,
                },
                "listingUsp": null,
                "priceV2": Object {
                  "__typename": "MoneyV2",
                  "amount": "34.99",
                  "currencyCode": "USD",
                },
                "quantityAvailable": 10,
                "selectedOptions": Array [
                  Object {
                    "__typename": "SelectedOption",
                    "name": "Title",
                    "value": "Default Title",
                  },
                ],
                "sku": "move",
                "subscriptionPriceAmount": Object {
                  "__typename": "Metafield",
                  "id": "Z2lkOi8vc2hvcGlmeS9NZXRhZmllbGQvMTI5ODIzNzg3NTgyMjI=",
                  "value": "29.99",
                },
                "title": "Default Title",
                "units": Object {
                  "__typename": "Metafield",
                  "id": "gid://shopify/Metafield/1",
                  "value": "60",
                },
              },
              "variantId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8zMTc0NjY1MDQwNjk5MA==",
              "variantTitle": "Default Title",
              "vendor": "Front Of The Pack",
            },
            Object {
              "__typename": "RLineItem",
              "frequency": Object {
                "__typename": "RFrequency",
                "chargeDelayDays": null,
                "orderIntervalFrequency": 30,
                "orderIntervalUnit": "DAY",
              },
              "id": "E9vEeaxExeZQv38FGeT+UAVTr/o=",
              "image": "https://cdn.shopify.com/s/files/1/0266/2825/9918/products/the-one-x1.png?v=1589206978",
              "linePrice": Object {
                "__typename": "MoneyV2",
                "amount": "34.99",
                "currencyCode": "USD",
              },
              "price": Object {
                "__typename": "MoneyV2",
                "amount": "34.99",
                "currencyCode": "USD",
              },
              "product": Object {
                "__typename": "Product",
                "availableForSale": true,
                "bottomline": Object {
                  "__typename": "ReviewBottomline",
                  "averageScore": 4.5,
                  "totalReviews": 2,
                },
                "bundleUnit": null,
                "bundleUnitPlural": null,
                "caloriesPerUnit": null,
                "compareAtPriceV2": null,
                "containers": null,
                "defaultSelectionSku": null,
                "defaultSelectionSubscription": null,
                "defaultVariantOrder": null,
                "description": "Targeted joint and mobility support",
                "featuredImage": Object {
                  "__typename": "ImageConnection",
                  "edges": Array [
                    Object {
                      "__typename": "ImageEdge",
                      "node": Object {
                        "__typename": "Image",
                        "id": "1",
                        "src": "https://cdn.shopify.com/mock-image/product-1.jpg",
                      },
                    },
                  ],
                },
                "handle": "move",
                "hasSubscription": null,
                "id": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0LzQ1MzU1Mzc1MzMwMDY=",
                "images": Object {
                  "__typename": "ImageConnection",
                  "edges": Array [
                    Object {
                      "__typename": "ImageEdge",
                      "node": Object {
                        "__typename": "Image",
                        "height": 1000,
                        "id": "1",
                        "url": "https://cdn.shopify.com/mock-image/product-1.jpg",
                        "width": 1000,
                      },
                    },
                    Object {
                      "__typename": "ImageEdge",
                      "node": Object {
                        "__typename": "Image",
                        "height": 1000,
                        "id": "2",
                        "url": "https://cdn.shopify.com/mock-image/product-2.jpg",
                        "width": 1000,
                      },
                    },
                    Object {
                      "__typename": "ImageEdge",
                      "node": Object {
                        "__typename": "Image",
                        "height": 1000,
                        "id": "3",
                        "url": "https://cdn.shopify.com/mock-image/product-3.jpg",
                        "width": 1000,
                      },
                    },
                    Object {
                      "__typename": "ImageEdge",
                      "node": Object {
                        "__typename": "Image",
                        "height": 1000,
                        "id": "4",
                        "url": "https://cdn.shopify.com/mock-image/variant-4.jpg",
                        "width": 1000,
                      },
                    },
                  ],
                },
                "isSubscriptionOnly": null,
                "listingSku": null,
                "listingSubscription": null,
                "listingSubtitle": null,
                "options": Array [
                  Object {
                    "__typename": "ProductOption",
                    "id": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0T3B0aW9uLzU4NzMxNjM4NjIwOTQ=",
                    "name": "Title",
                    "values": Array [
                      "Default Title",
                    ],
                  },
                ],
                "preorderShippingEstimate": null,
                "preorderType": null,
                "priceRange": Object {
                  "__typename": "ProductPriceRange",
                  "maxVariantPrice": Object {
                    "__typename": "MoneyV2",
                    "amount": "95.98",
                    "currencyCode": "USD",
                  },
                  "minVariantPrice": Object {
                    "__typename": "MoneyV2",
                    "amount": "35.99",
                    "currencyCode": "USD",
                  },
                },
                "productType": "Pet Vitamins & Supplements",
                "seo": Object {
                  "description": "",
                  "title": "",
                },
                "subscriptionFrequencies": null,
                "subscriptionUnit": null,
                "subtitle": Object {
                  "__typename": "Metafield",
                  "id": "metafield-subtitle-move",
                  "value": "Targeted joint and mobility support",
                },
                "title": "Move",
                "totalInventory": 1000,
                "unit": null,
                "variants": Object {
                  "__typename": "ProductVariantConnection",
                  "edges": Array [
                    Object {
                      "__typename": "ProductVariantEdge",
                      "node": Object {
                        "__typename": "ProductVariant",
                        "availableForSale": true,
                        "barcode": "123",
                        "bundleSize": null,
                        "compareAtPriceV2": Object {
                          "__typename": "MoneyV2",
                          "amount": "39.99",
                          "currencyCode": "USD",
                        },
                        "defaultShippingIntervalFrequency": Object {
                          "__typename": "Metafield",
                          "id": "defaultShippingIntervalFrequency-1",
                          "value": "1",
                        },
                        "id": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8zMTc0NjY1MDQwNjk5MA==",
                        "image": Object {
                          "__typename": "Image",
                          "height": 1000,
                          "id": "4",
                          "url": "https://cdn.shopify.com/mock-image/variant-4.jpg",
                          "width": 1000,
                        },
                        "listingUsp": null,
                        "priceV2": Object {
                          "__typename": "MoneyV2",
                          "amount": "34.99",
                          "currencyCode": "USD",
                        },
                        "quantityAvailable": 10,
                        "selectedOptions": Array [
                          Object {
                            "__typename": "SelectedOption",
                            "name": "Title",
                            "value": "Default Title",
                          },
                        ],
                        "sku": "move",
                        "subscriptionPriceAmount": Object {
                          "__typename": "Metafield",
                          "id": "Z2lkOi8vc2hvcGlmeS9NZXRhZmllbGQvMTI5ODIzNzg3NTgyMjI=",
                          "value": "29.99",
                        },
                        "title": "Default Title",
                        "units": Object {
                          "__typename": "Metafield",
                          "id": "gid://shopify/Metafield/1",
                          "value": "60",
                        },
                      },
                    },
                  ],
                },
                "vendor": "Front Of The Pack",
              },
              "productId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0LzQ1MzU1Mzc1MzMwMDY=",
              "productType": "",
              "properties": Array [
                Object {
                  "name": "cartLineItemId",
                  "value": "cart-line-item-id",
                },
              ],
              "quantity": 1,
              "sku": "move",
              "title": "Move",
              "variant": Object {
                "__typename": "ProductVariant",
                "availableForSale": true,
                "barcode": "123",
                "bundleSize": null,
                "compareAtPriceV2": Object {
                  "__typename": "MoneyV2",
                  "amount": "39.99",
                  "currencyCode": "USD",
                },
                "defaultShippingIntervalFrequency": Object {
                  "__typename": "Metafield",
                  "id": "defaultShippingIntervalFrequency-1",
                  "value": "1",
                },
                "id": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8zMTc0NjY1MDQwNjk5MA==",
                "image": Object {
                  "__typename": "Image",
                  "height": 1000,
                  "id": "4",
                  "url": "https://cdn.shopify.com/mock-image/variant-4.jpg",
                  "width": 1000,
                },
                "listingUsp": null,
                "priceV2": Object {
                  "__typename": "MoneyV2",
                  "amount": "34.99",
                  "currencyCode": "USD",
                },
                "quantityAvailable": 10,
                "selectedOptions": Array [
                  Object {
                    "__typename": "SelectedOption",
                    "name": "Title",
                    "value": "Default Title",
                  },
                ],
                "sku": "move",
                "subscriptionPriceAmount": Object {
                  "__typename": "Metafield",
                  "id": "Z2lkOi8vc2hvcGlmeS9NZXRhZmllbGQvMTI5ODIzNzg3NTgyMjI=",
                  "value": "29.99",
                },
                "title": "Default Title",
                "units": Object {
                  "__typename": "Metafield",
                  "id": "gid://shopify/Metafield/1",
                  "value": "60",
                },
              },
              "variantId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8zMTc0NjY1MDQwNjk5MA==",
              "variantTitle": "Default Title",
              "vendor": "Front Of The Pack",
            },
          ],
        },
      },
    },
  ],
]
`;

exports[`checkoutLineItemsToCartLineItems should handle containers 1`] = `
Array [
  Object {
    "containerPrices": null,
    "containerUpgrade": false,
    "frequency": null,
    "handle": "move",
    "id": "E9vEeaxExeZQv38FGeT+UAVTr/o=",
    "imageUrl": "https://cdn.shopify.com/mock-image/variant-4.jpg",
    "productId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0LzQ1MzU1Mzc1MzMwMDY=",
    "properties": Object {},
    "quantity": 1,
    "subscriptionUnitPrice": Object {
      "amount": "29.99",
      "currencyCode": "USD",
    },
    "subtitle": "Default Title",
    "title": "Move",
    "unitPrice": Object {
      "amount": "34.99",
      "currencyCode": "USD",
    },
    "variantId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8zMTc0NjY1MDQwNjk5MA==",
  },
  Object {
    "containerPrices": Object {
      "otp": Object {
        "base": null,
        "upgrade": Object {
          "amount": "15.0",
          "currencyCode": "USD",
        },
      },
      "sub": Object {
        "base": Object {
          "amount": "0.0",
          "currencyCode": "USD",
        },
        "upgrade": null,
      },
    },
    "containerUpgrade": true,
    "frequency": null,
    "handle": "move",
    "id": "cart-line-item-id",
    "imageUrl": "https://cdn.shopify.com/mock-image/variant-4.jpg",
    "productId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0LzQ1MzU1Mzc1MzMwMDY=",
    "properties": Object {},
    "quantity": 1,
    "subscriptionUnitPrice": Object {
      "amount": "29.99",
      "currencyCode": "USD",
    },
    "subtitle": "Default Title",
    "title": "Move",
    "unitPrice": Object {
      "amount": "34.99",
      "currencyCode": "USD",
    },
    "variantId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8zMTc0NjY1MDQwNjk5MA==",
  },
]
`;

exports[`checkoutLineItemsToCartLineItems should map ReCharge checkout line items to cart line items 1`] = `
Array [
  Object {
    "containerPrices": null,
    "containerUpgrade": false,
    "frequency": Object {
      "chargeDelayDays": null,
      "orderIntervalFrequency": 30,
      "orderIntervalUnit": "DAY",
    },
    "handle": "move",
    "id": "E9vEeaxExeZQv38FGeT+UAVTr/o=",
    "imageUrl": "https://cdn.shopify.com/mock-image/variant-4.jpg",
    "productId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0LzQ1MzU1Mzc1MzMwMDY=",
    "properties": Object {},
    "quantity": 1,
    "subscriptionUnitPrice": Object {
      "amount": "29.99",
      "currencyCode": "USD",
    },
    "subtitle": "Default Title",
    "title": "Move",
    "unitPrice": Object {
      "amount": "34.99",
      "currencyCode": "USD",
    },
    "variantId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8zMTc0NjY1MDQwNjk5MA==",
  },
]
`;

exports[`checkoutLineItemsToCartLineItems should remove reserved properties and return all others 1`] = `
Array [
  Object {
    "containerPrices": Object {
      "otp": Object {
        "base": null,
        "upgrade": Object {
          "amount": "15.0",
          "currencyCode": "USD",
        },
      },
      "sub": Object {
        "base": Object {
          "amount": "0.0",
          "currencyCode": "USD",
        },
        "upgrade": null,
      },
    },
    "containerUpgrade": false,
    "frequency": null,
    "handle": "move",
    "id": "cart-line-item-id",
    "imageUrl": "https://cdn.shopify.com/mock-image/variant-4.jpg",
    "productId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0LzQ1MzU1Mzc1MzMwMDY=",
    "properties": Object {
      "bar": "Sed condimentum velit sit amet",
      "foo": "Lorem ipsum dolor sit amet",
    },
    "quantity": 1,
    "subscriptionUnitPrice": Object {
      "amount": "29.99",
      "currencyCode": "USD",
    },
    "subtitle": "Default Title",
    "title": "Move",
    "unitPrice": Object {
      "amount": "34.99",
      "currencyCode": "USD",
    },
    "variantId": "Z2lkOi8vc2hvcGlmeS9Qcm9kdWN0VmFyaWFudC8zMTc0NjY1MDQwNjk5MA==",
  },
]
`;
